<resources>
    <string name="app_name">Hearts</string>
    <string name="name_editText">Name</string>
    <string name="searchServer_button">Search Server</string>
    <string name="hostServer_button">Host Server</string>
    <string name="waiting_for_server">Waiting for server</string>
    <string name="must_enter_name">You have to enter a name</string>
    <string name="start_button">Start Game</string>
    <string name="hosting_server">Hosting Server\n</string>
    <string name="search_for_server">Searching for Server...</string>
    <string name="failed">Failed\nPlease search again</string>
    <string name="yourcode">Your code is: </string>
    <string name="code">Code</string>
    <string name="cantplay">You can\'t play this card</string>
    <string name="cantcall">You can\'t call this card</string>
    <string name="onlyone">You must select exactly one card</string>
    <string name="onlythree">You have to select exactly 3 cards</string>

    <string-array name="Player">
        <item>None</item>
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
        <item>Player 4</item>
    </string-array>
</resources>
