<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tarnag.hearts.ConnectActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/startButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name_editText"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editCode"
        android:hint="@string/code"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/editText" />

    <Button
        android:text="@string/searchServer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button"
        android:layout_marginStart="28dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:onClick="searchServerClicked" />

    <Button
        android:text="@string/hostServer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:id="@+id/button2"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:onClick="hostServerClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginTop="13dp"
        android:id="@+id/status"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/startButton"
        android:visibility="invisible"
        android:onClick="startGameOnClick" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="450px"
        android:visibility="invisible"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="27dp"
        android:id="@+id/listView"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
